这次来点恨的

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,8 @@
 <p>你是傻逼2号</p>
 <p>你是傻逼3号</p>
 
-<p>我要错误啊啊啊啊啊啊啊啊！！！</p>
-<a>错误你快点来啊！！！</a>
 
-<div>我是全世界最可爱的人</div>
-<div>你是哪位</div>
-
-<!--我又新改了老爸的内容   只加了P  -->
+<!--我又  又新改了老爸的内容    -->
 
 <p>我再试一次,更改老爸的内容,看看儿子会不会变</p>
 
