推送儿子看看影响老爸不

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,8 @@
 <p style="color: #6fff2d">我要错误啊啊啊啊啊啊啊啊！！！</p>
 
 
-<p>你是傻逼1号</p>
-<p>你是傻逼2号</p>
-<p>你是傻逼3号</p>
+<!--我把傻逼全删了-->
+
 
 <p>我要错误啊啊啊啊啊啊啊啊！！！</p>
 <a>错误你快点来啊！！！</a>
